--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -204,10 +204,10 @@
     "title": "通知",
     "noticeTab": {
       "title": "提醒",
-      "replyBody": "在 $threadTitle 中回覆了",
-      "rateBody": "在 $threadTitle 中給您的帖子評分 $score",
+      "replyBody(rich)": "在 $threadTitle 中回覆了",
+      "rateBody(rich)": "在 $threadTitle 中給您的帖子評分 $score",
       "mentionBody": "在話題中提到了你",
-      "inviteBody": "邀請您參與話題 $threadTitle",
+      "inviteBody(rich)": "邀請您參與話題 $threadTitle",
       "newFriendBody": "和您成為好友了",
       "ignoredSameNotice": "還有 $count 個相同通知被忽略",
       "taskID": "任務ID：$taskId"
