--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -377,7 +377,8 @@
     "viewAllAuthors": "查看所有作者",
     "rateFetchInfoFailed": "获取评分信息失败",
     "rateFailed": "评分失败",
-    "edit": "編輯"
+    "edit": "編輯",
+    "lastEditInfo": "本帖最後由 $username 於 $time 編輯"
   },
   "packetCard": {
     "title": "你找到一個紅包了！",
