feat(editor): Add experimental info hint for bbcode editor

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -394,5 +394,10 @@
   },
   "bountyAnswerCard": {
     "title": "Best Answer"
+  },
+  "bbcodeEditor": {
+    "experimentalInfo": "Experimental BBCode Editor",
+    "experimentalInfoTitle": "Experimental BBCode Editor",
+    "experimentalInfoDetail": "This bbcode editor supports WYSIWYG and provides convenient ways to add text styles and other rich text components.\nIt is still in experimental state which means: Already tested but may not behave as expected."
   }
 }
