--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -394,5 +394,10 @@
   },
   "bountyAnswerCard": {
     "title": "最佳答案"
+  },
+  "bbcodeEditor": {
+    "experimentalInfo": "實驗性bbcode編輯器",
+    "experimentalInfoTitle": "實驗性bbcode編輯器",
+    "experimentalInfoDetail": "此bbcode編輯器支援所見即所得，可以方便地添加文字樣式和其他bbcode元件。\n但處於實驗階段：已經經過測試，但可能有bug。"
   }
 }
