--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -402,6 +402,9 @@
   "bbcodeEditor": {
     "experimentalInfo": "Experimental BBCode Editor",
     "experimentalInfoTitle": "Experimental BBCode Editor",
-    "experimentalInfoDetail": "This bbcode editor supports WYSIWYG and provides convenient ways to add text styles and other rich text components.\nIt is still in experimental state which means: Already tested but may not behave as expected."
+    "experimentalInfoDetail": "This bbcode editor supports WYSIWYG and provides convenient ways to add text styles and other rich text components.\nIt is still in experimental state which means: Already tested but may not behave as expected.",
+    "emoji": {
+      "downloading": "Downloading emoji (10MB), this may take a while..."
+    }
   }
 }
