feat(editor): Roll editor and support clear font color

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -412,6 +412,9 @@
       "description": "Url description",
       "link": "Url link",
       "errorEmpty": "Should not be empty"
+    },
+    "foregroundColor": {
+      "title": "Font Color"
     }
   }
 }
