feat(editor): Roll editor and support change background color
* Roll editor to change background color through controller.
* Support set and clear background color.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -415,6 +415,9 @@
     },
     "foregroundColor": {
       "title": "Font Color"
+    },
+    "backgroundColor": {
+      "title": "Background Color"
     }
   }
 }
