feat(editor): Roll editor and init inline image support
* Roll editor for basic inline image support.
* Support insert image without any size.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -418,6 +418,12 @@
     },
     "backgroundColor": {
       "title": "Background Color"
+    },
+    "image": {
+      "title": "Insert Image",
+      "description": "Image description",
+      "link": "Picture link",
+      "errorEmpty": "Should not be empty"
     }
   }
 }
