feat(editor): Roll editor and support image display size
* Roll editor for image display size support.
* Allow set image size used in bbcode when insert images.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -423,7 +423,10 @@
       "title": "Insert Image",
       "description": "Image description",
       "link": "Picture link",
-      "errorEmpty": "Should not be empty"
+      "errorEmpty": "Should not be empty",
+      "width": "Width",
+      "height": "Height",
+      "errorInvalidNumber": "Invalid number"
     }
   }
 }
