fix(widgets): Disable reply bar when not login

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -201,6 +201,7 @@
     "sendReplyHint": "Reply...",
     "sendReply": "Reply",
     "closed": "Thread is closed",
+    "needLogin": "Need login",
     "replySuccess": "Reply success",
     "replyFailed": "Failed to reply: $err"
   },
