feat(editor): Roll editor and support mention user
* Roll editor for mention user feature.
* Support mention other user in bbcode rich editor by the button in
  toolbar.
  * Inserted span has similar appearance with url span.
  * Try visit the mentioned user's profile page when span tapped.
  * No user existence check for now.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -428,6 +428,11 @@
       "width": "Width",
       "height": "Height",
       "errorInvalidNumber": "Invalid number"
+    },
+    "mentionUser": {
+      "title": "Mention User",
+      "username": "Username",
+      "errorEmpty": "Should not be empty"
     }
   }
 }
