feat(notification): Show no data hint when notice is empty

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -10,6 +10,7 @@
     "needLoginToSeeThisPage": "Need to login to see this page",
     "pleaseWait": "Please wait",
     "loadFailedAndRetry": "Load failed, retrying",
+    "noData": "No Data",
     "noMoreData": "No more data",
     "reset": "Reset to default",
     "more": "More",
