fix(thread): Fix brief profile user group and nickname

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -386,7 +386,9 @@
     "edit": "Edit",
     "lastEditInfo": "Last edited by $username at $time",
     "profileDialog": {
+      "group": "Group",
       "title": "Title",
+      "nickname": "Nickname",
       "recommended": "Recommended",
       "thread": "Thread",
       "post": "Post",
