feat(notification): Support personal and broadcast message
Add support to fetech and show personal and broadcast message.

Chat page and broadcast detail page is not implemented.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -223,7 +223,8 @@
       "messageCount": "$count msg"
     },
     "broadcastMessageTab": {
-      "title": "Broadcast"
+      "title": "Broadcast",
+      "system": "System"
     },
     "noticeDetailPage": {
       "titleReply": "Reply",
