feat(chat): Finish chat page
Build and support chat in chat page.

Chat page entrance:

* User brief profile in thread floor.
* User profile page.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -313,6 +313,10 @@
     "title": "Chat History",
     "info": "With $user ($count messages)"
   },
+  "chatPage": {
+    "title": "Chat",
+    "hint": "Chat with $user"
+  },
   "forumCard": {
     "links": "Links",
     "subForums": "Subreddit"
