feat(*): Part of profile page refactor
This commit contains part of refactor in user profile page.

New basic UI layout and some funtionality is included, but most user
info parsing logic and presentation is not implemented.

[skip ci]

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -14,7 +14,8 @@
     "noMoreData": "No more data",
     "reset": "Reset to default",
     "more": "More",
-    "pageIndex": "Page $index"
+    "pageIndex": "Page $index",
+    "copiedToClipboard": "Copied to clipboard"
   },
   "navigation": {
     "homepage": "Home",
@@ -98,8 +99,7 @@
     "version": "App Version",
     "flutterVersion": "Flutter Version",
     "dartVersion": "Dart Version",
-    "license": "License",
-    "copiedToClipboard": "Copied to clipboard"
+    "license": "License"
   },
   "upgradePage": {
     "title": "Upgrade",
