feat(profile): Pars data and part of layout

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -173,6 +173,12 @@
     "areYouSureToLogout": "Are you sure to logout?",
     "username": "Username",
     "uid": "Uid",
+    "customTitle": "Custom Title",
+    "emailVerified": "Email verified",
+    "emailNotVerified": "Email not verified",
+    "videoVerified": "Video verified",
+    "videoNotVerified": "Not video verified",
+    "signature": "Signature",
     "checkinDaysCount": "Check-in Days Count",
     "checkinDaysInThisMonth": "Check-in Days This Month",
     "checkinRecentTime": "Recent Check-in Time",
