--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -173,6 +173,12 @@
     "areYouSureToLogout": "确定注销？",
     "username": "用户名",
     "uid": "用户ID",
+    "customTitle": "自定义头衔",
+    "emailVerified": "邮箱已认证",
+    "emailNotVerified": "邮箱未认证",
+    "videoVerified": "已视频认证",
+    "videoNotVerified": "未视频认证",
+    "signature": "个人签名",
     "checkinDaysCount": "累计签到总天数",
     "checkinDaysInThisMonth": "本月签到天数",
     "checkinRecentTime": "最近签到时间",
