--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -173,6 +173,12 @@
     "areYouSureToLogout": "確定註銷？",
     "username": "使用者名稱",
     "uid": "用戶ID",
+    "customTitle": "自訂頭銜",
+    "emailVerified": "郵件已認證",
+    "emailNotVerified": "郵件未認證",
+    "videoVerified": "已錄影認證",
+    "videoNotVerified": "未視訊認證",
+    "signature": "個人簽名",
     "checkinDaysCount": "累計簽到總天數",
     "checkinDaysInThisMonth": "本月簽到天數",
     "checkinRecentTime": "最近簽到時間",
