feat(*): Init image actions
This commit add part of the image action feature.

Image action feature aims to provide user accessible actions when
interacting with images in munch html tags or other necessary
situations including check image in fullscreen, copy image url,
open link attached on image, reload image and more.

This commit implements:

* Image action bottom sheet, entry of the feature.
* Attach image action bottom sheet upon html images.
* Copy image url.
* Open attched link.

The image reload feature requires large mount of changes on all places
using cached image and image caching logic should improve to achive
this. All loading and loaded image MUST watch to changes on current
image so that they will refresh after reload finished.

This commit also removed the heading and trailing decoration in munched
html images who is the only child element wrapped in `<a>` tags.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -362,6 +362,9 @@
     "success": "Sent successfully",
     "failed": "Sent failed: $message"
   },
+  "imageDetailPage": {
+    "title": "Image Detail"
+  },
   "forumCard": {
     "links": "Links",
     "subForums": "Subreddit"
@@ -517,5 +520,12 @@
       "username": "Username",
       "errorEmpty": "Should not be empty"
     }
+  },
+  "imageBottomSheet": {
+    "title": "Image Actions",
+    "checkDetail": "Check details",
+    "copyImageUrl": "Copy image url",
+    "reloadImage": "ReloadImage",
+    "openLink": "Open link"
   }
 }
