--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -69,6 +69,10 @@
       "doublePressExit": {
         "title": "按兩下返回才退出應用",
         "detail": "避免意外退出app"
+      },
+      "threadReverseOrder": {
+        "title": "倒序瀏覽貼文",
+        "detail": "貼文裡優先看到最新發布的樓層"
       }
     },
     "checkinSection": {
