feat(settings): Embed changelog till publish

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -89,7 +89,8 @@
     "othersSection": {
       "title": "Others",
       "about": "About",
-      "upgrade": "Update"
+      "upgrade": "Update",
+      "changelog": "Changelog"
     }
   },
   "aboutPage": {
