--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -89,7 +89,8 @@
     "othersSection": {
       "title": "其他",
       "about": "关于",
-      "upgrade": "更新"
+      "upgrade": "更新",
+      "changelog": "更新日志"
     }
   },
   "aboutPage": {
