--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -89,7 +89,8 @@
     "othersSection": {
       "title": "其他",
       "about": "關於",
-      "upgrade": "更新"
+      "upgrade": "更新",
+      "changelog": "變更記錄"
     }
   },
   "aboutPage": {
