--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -84,7 +84,11 @@
       "title": "Storage",
       "clearCache": "Clear Cache",
       "sureToClear": "Are you sure to clear cache?",
-      "downloadAgainInfo": "The necessary cache will be downloaded from the server again"
+      "downloadAgainInfo": "The necessary cache will be downloaded from the server again",
+      "images": "Images",
+      "emoji": "Emoji",
+      "selectOneCache": "Need to select at least one kind of cache",
+      "clearSuccess": "Cleared successfully"
     },
     "othersSection": {
       "title": "Others",
