fix(homepage): Fix infinite loading
Trigger by user login state changes, only load homepage when not
logged in or failed to load.

--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -179,7 +179,7 @@
       "failedOtherError": "其他错误：$err"
     },
     "logout": "注销",
-    "areYouSureToLogout": "确定注销？",
+    "areYouSureToLogout": "确定要退出账户？",
     "username": "用户名",
     "uid": "用户ID",
     "customTitle": "自定义头衔",
