--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -179,7 +179,7 @@
       "failedOtherError": "其他錯誤：$err"
     },
     "logout": "登出",
-    "areYouSureToLogout": "確定註銷？",
+    "areYouSureToLogout": "確定要退出帳戶？",
     "username": "使用者名稱",
     "uid": "用戶ID",
     "customTitle": "自訂頭銜",
